# pan-scm-address-group-converter

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  scm_address_group_converter.py
tests/: test_converter.py
